--- a/public/src/app/header/header.component.html
+++ b/public/src/app/header/header.component.html
@@ -1,5 +1,6 @@
-<div class="bg-light-green">
+<div class="bg-light-{{color}}">
     <div class="grid headerContainer">
+
         <!--ICON-->
         <div class="col-3">
             <div class="jodelIcon"></div>
@@ -12,7 +13,9 @@
             </p>
         </div>
 
-        <!--???-->
-        <div class="col-3"></div>
+        <!--LOCATION / TIME ???-->
+        <div class="col-3">
+            <p>{{location}}<br>{{time}}</p>
+        </div>
     </div>
 </div>
