--- a/public/src/style/colors.less
+++ b/public/src/style/colors.less
@@ -21,6 +21,7 @@
         red @red,
         blue @blue,
         turquoise @turquoise,
+        grey @grey,
         lightGrey @lightGrey;
 
 @lightness: 10%;
