added/completed "your result"-content page skeleton

--- a/public/src/app/content/content.component.html
+++ b/public/src/app/content/content.component.html
@@ -1,19 +1,8 @@
 <div class="mainContainer">
   <div class="grid">
 
-    <!--LEFT-->
-    <div class="col-3">
-      <app-map-content></app-map-content>
-    </div>
+    <!--YOUR RESULT CONTENT-->
+    <app-your-result-content></app-your-result-content>
 
-    <!--CENTER-->
-    <div class="col-3">
-      <app-result-content [resultData]="data.result"></app-result-content>
-    </div>
-
-    <!--RIGHT-->
-    <div class="col-3">
-      <h2>Überschrift</h2>
-    </div>
   </div>
 </div>
