--- a/public/src/styles.less
+++ b/public/src/styles.less
@@ -8,6 +8,8 @@
 @import "./app/header/header.component.less";
 @import "./app/chart/bar-chart/bar-chart.component.less";
 @import "./app/content/content.component.less";
-@import "./app/content/result-content/result-content.component.less";
-@import "./app/content/map-content/map-content.component.less";
-
+@import "app/content/your-result-content/result-content/result-content.component.less";
+@import "app/content/your-result-content/map-content/map-content.component.less";
+@import "app/content/your-result-content/your-result-content.component.less";
+@import "app/content/your-result-content/keyword-effect-content/keyword-effect-content.component.less";
+@import "app/content/your-result-content/time-content/time-content.component.less";
