--- a/public/src/app/content/your-result-content/result-content/result-content.component.html
+++ b/public/src/app/content/your-result-content/result-content/result-content.component.html
@@ -1,27 +1,26 @@
 <h2>Das hast du mit deinem Jodel erreicht</h2>
 
 <!--Karma-->
-<app-bar-chart [value]="result.karma"
+<app-bar-chart [value]="resultData.karma"
                [title]="'Karma'">
 </app-bar-chart>
 
 <!--Votes-->
-<app-bar-chart [value]="result.votes"
+<app-bar-chart [value]="resultData.votes"
                [title]="'Votes'">
 </app-bar-chart>
 
 <!--Comments-->
-<app-bar-chart [value]="result.comments"
+<app-bar-chart [value]="resultData.comments"
                [title]="'Kommentare'">
 </app-bar-chart>
 
 <!--Pins-->
-<app-bar-chart [color]="'orange'"
-               [value]="result.pins"
+<app-bar-chart [value]="resultData.pins"
                [title]="'Pins'">
 </app-bar-chart>
 
 <!--Shared-->
-<app-bar-chart [value]="result.shared"
+<app-bar-chart [value]="resultData.shared"
                [title]="'Shared'">
 </app-bar-chart>
