--- a/public/src/app/content/your-result-content/map-content/map-content.component.html
+++ b/public/src/app/content/your-result-content/map-content/map-content.component.html
@@ -1,6 +1,6 @@
 <h2>Beliebtheit in Deutschland</h2>
 
 <!--TODO MAP-->
-<div class="grid">
+<div class="grid bg-lightGrey">
     <h3>TODO KARTE</h3>
 </div>
