--- a/public/src/styles.less
+++ b/public/src/styles.less
@@ -13,3 +13,4 @@
 @import "app/content/your-result-content/your-result-content.component.less";
 @import "app/content/your-result-content/keyword-effect-content/keyword-effect-content.component.less";
 @import "app/content/your-result-content/time-content/time-content.component.less";
+@import "app/content/keyword-content/keyword-content.component.less";
