--- a/public/src/app/content/your-result-content/your-result-content.component.html
+++ b/public/src/app/content/your-result-content/your-result-content.component.html
@@ -6,7 +6,7 @@
 
 <!--CENTER-->
 <div class="col-3">
-    <app-result-content [resultData]="content.result">
+    <app-result-content [resultData]="yourResultContent.result">
     </app-result-content>
 </div>
 
@@ -14,7 +14,7 @@
 <!--RIGHT-->
 <div class="col-3">
 
-    <app-keyword-effect-content [keywordEffectArray]="content.keywordEffectArray">
+    <app-keyword-effect-content [keywordEffectArray]="yourResultContent.keywordEffectArray">
     </app-keyword-effect-content>
 
     <div class="grid">
