--- a/public/src/app/header/header.component.html
+++ b/public/src/app/header/header.component.html
@@ -1,8 +1,9 @@
 <div class="bg-light-{{color}}">
     <div class="grid headerContainer">
 
-        <!--ICON-->
+        <!--ICON AND DROPDOWN-->
         <div class="col-3">
+            <select></select>
             <div class="jodelIcon"></div>
         </div>
 
