--- a/public/src/app/content/content.component.html
+++ b/public/src/app/content/content.component.html
@@ -1,14 +1,16 @@
 <div class="mainContainer">
 
     <!--switch by current contentpage-->
-    <div class="grid" [ngSwitch]="currentContenttype">
+    <div class="grid" [ngSwitch]="currentContentpage.type">
 
         <!--YOUR RESULT CONTENT-->
-        <app-your-result-content *ngSwitchCase="CONTENTTYPE.YOUR_RESULT">
+        <app-your-result-content *ngSwitchCase="CONTENTTYPE.YOUR_RESULT"
+                                 [yourResultContent]="data.yourResultContent">
         </app-your-result-content>
 
         <!--KEYWORD CONTENT-->
-        <app-keyword-content *ngSwitchCase="CONTENTTYPE.KEYWORD">
+        <app-keyword-content *ngSwitchCase="CONTENTTYPE.KEYWORD"
+                             [keywordContent]="data.keywordContent"]>
         </app-keyword-content>
 
     </div>
