--- a/public/src/app/content/content.component.html
+++ b/public/src/app/content/content.component.html
@@ -1,7 +1,7 @@
 <div class="mainContainer">
 
     <!--switch by current contentpage-->
-    <div class="grid" [ngSwitch]="currentContentpage.type">
+    <div class="grid" [ngSwitch]="contentService.currentContentpage.type">
 
         <!--YOUR RESULT CONTENT-->
         <app-your-result-content *ngSwitchCase="CONTENTTYPE.YOUR_RESULT"
@@ -10,7 +10,7 @@
 
         <!--KEYWORD CONTENT-->
         <app-keyword-content *ngSwitchCase="CONTENTTYPE.KEYWORD"
-                             [keywordContent]="data.keywordContent"]>
+                             [keywordContent]="data.keywordContent">
         </app-keyword-content>
 
     </div>
