--- a/public/src/app/content/shared/keywords-barchar/keyword-barchart-content.component.html
+++ b/public/src/app/content/shared/keywords-barchar/keyword-barchart-content.component.html
@@ -1,9 +1,5 @@
-<h2>Auswirkung deiner Schlagworte</h2>
-
-
-
 <!--Keyword-->
-<app-bar-chart *ngFor="let keyword of keywordEffectArray"
+<app-bar-chart *ngFor="let keyword of keywordBarchartArray"
                [value]="keyword.value"
                [color]="keyword.color"
                [title]="keyword.keyword">
