--- a/public/src/app/content/your-result-content/your-result-content.component.html
+++ b/public/src/app/content/your-result-content/your-result-content.component.html
@@ -14,8 +14,9 @@
 <!--RIGHT-->
 <div class="col-3">
 
-    <app-keyword-effect-content [keywordEffectArray]="yourResultContent.keywordEffectArray">
-    </app-keyword-effect-content>
+    <h2>Auswirkung deiner Schlagworte</h2>
+    <app-keyword-barchar-content [keywordBarchartArray]="yourResultContent.keywordEffectArray">
+    </app-keyword-barchar-content>
 
     <div class="grid">
         <app-time-content></app-time-content>
