--- a/public/src/app/content/your-result-content/your-result-content.component.html
+++ b/public/src/app/content/your-result-content/your-result-content.component.html
@@ -14,8 +14,8 @@
 <!--RIGHT-->
 <div class="col-3">
 
-    <h2>Auswirkung deiner Schlagworte</h2>
-    <app-keyword-barchar-content [keywordBarchartArray]="yourResultContent.keywordEffectArray">
+    <app-keyword-barchar-content [keywordBarchartArray]="yourResultContent.keywordEffectArray"
+                                 [headline]="'Auswirkung deiner Schlagworte'">
     </app-keyword-barchar-content>
 
     <div class="grid">
