--- a/public/src/app/content/shared/keywords-barchar/keyword-barchart-content.component.html
+++ b/public/src/app/content/shared/keywords-barchar/keyword-barchart-content.component.html
@@ -1,4 +1,5 @@
-<!--Keyword-->
+<h2>{{headline}}</h2>
+
 <app-bar-chart *ngFor="let keyword of keywordBarchartArray"
                [value]="keyword.value"
                [color]="keyword.color"
