--- a/public/src/styles.less
+++ b/public/src/styles.less
@@ -6,7 +6,7 @@
 // IMPORT COMPONENTS LESS FILES
 @import "./app/app.component.less";
 @import "./app/header/header.component.less";
-@import "./app/chart/bar-chart/bar-chart.component.less";
+@import "app/content/shared/chart/bar-chart/bar-chart.component.less";
 @import "./app/content/content.component.less";
 @import "app/content/your-result-content/result-content/result-content.component.less";
 @import "app/content/shared/map-content/map-content.component.less";
