--- a/public/src/styles.less
+++ b/public/src/styles.less
@@ -5,12 +5,17 @@
 
 // IMPORT COMPONENTS LESS FILES
 @import "./app/app.component.less";
+
 @import "./app/header/header.component.less";
+@import "./app/header/color-palette/color-palette.component.less";
+@import "./app/header/content-page-selection/content-page-selection.component.less";
+
 @import "app/content/shared/chart/bar-chart/bar-chart.component.less";
-@import "./app/content/content.component.less";
-@import "app/content/your-result-content/result-content/result-content.component.less";
 @import "app/content/shared/map-content/map-content.component.less";
-@import "app/content/your-result-content/your-result-content.component.less";
 @import "app/content/shared/keywords-barchar/keyword-barchart-content.component.less";
 @import "app/content/shared/time-content/time-content.component.less";
+
+@import "/app/content/content.component.less";
+@import "app/content/your-result-content/result-content/result-content.component.less";
+@import "app/content/your-result-content/your-result-content.component.less";
 @import "app/content/keyword-content/keyword-content.component.less";
