--- a/public/src/style/fonts.less
+++ b/public/src/style/fonts.less
@@ -25,3 +25,16 @@ h3 {
   margin-top: 0;
   margin-bottom: 5px;
 }
+
+input,textarea,button {
+  font-family: 'Fira Sans', sans-serif;
+  border-style: none;
+  outline: none;
+}
+
+button {
+  cursor: pointer;
+  &:hover {
+    filter: brightness(110%);
+  }
+}
