--- a/public/src/app/header/header.component.html
+++ b/public/src/app/header/header.component.html
@@ -8,6 +8,7 @@
                 </div>
             </div>
 
+            <!--TODO disable input if currentContentage is set-->
             <!--JODEL TEXT-->
             <div class="col-3">
                 <textarea rows="5"
