--- a/public/src/app/content/shared/chart/bar-chart/bar-chart.component.less
+++ b/public/src/app/content/shared/chart/bar-chart/bar-chart.component.less
@@ -1,6 +1,6 @@
 .bar {
-  height: 20px;
-  width: 7px;
-  margin-right: 3px;
+  height: @barWidth * 2 + @barPadding;
+  width: @barWidth;
+  margin-right: 4px;
   float: left;
 }
