--- a/public/src/app/content/shared/time-content/time-content.component.html
+++ b/public/src/app/content/shared/time-content/time-content.component.html
@@ -1,6 +1,6 @@
 <h2>Auswirkung deiner Uhrzeit</h2>
 
 <!--TODO TIME CHART-->
-<div class="grid bg-lightGrey">
-    <h3>TODO UHRZEIT / HISTOGRAMM</h3>
+<div class="grid">
+    <app-time-chart [timeModel]="time"></app-time-chart>
 </div>
