--- a/public/src/styles.less
+++ b/public/src/styles.less
@@ -2,6 +2,7 @@
 @import "./style/grid.less";
 @import "./style/colors.less";
 @import "./style/fonts.less";
+@import "./style/charts.less";
 
 // IMPORT COMPONENTS LESS FILES
 @import "./app/app.component.less";
@@ -11,6 +12,7 @@
 @import "./app/header/content-page-selection/content-page-selection.component.less";
 
 @import "app/content/shared/chart/bar-chart/bar-chart.component.less";
+@import "app/content/shared/chart/time-chart/time-chart.component.less";
 @import "app/content/shared/map-content/map-content.component.less";
 @import "app/content/shared/keywords-barchar/keyword-barchart-content.component.less";
 @import "app/content/shared/time-content/time-content.component.less";
