--- a/public/src/app/content/your-result-content/your-result-content.component.html
+++ b/public/src/app/content/your-result-content/your-result-content.component.html
@@ -19,7 +19,7 @@
     </app-keyword-barchar-content>
 
     <div class="grid">
-        <app-time-content></app-time-content>
+        <app-time-content [time]="yourResultContent.time"></app-time-content>
     </div>
 
 </div>
