--- a/public/src/app/content/keyword-content/keyword-content.component.html
+++ b/public/src/app/content/keyword-content/keyword-content.component.html
@@ -12,7 +12,8 @@
     </app-keyword-barchar-content>
 
     <div class="grid">
-        <app-time-content [time]="keywordContent.time"></app-time-content>
+        <app-time-content [color]="keywordContent.color"
+                          [time]="keywordContent.time"></app-time-content>
     </div>
 
 </div>
