--- a/public/src/app/content/shared/time-content/time-content.component.html
+++ b/public/src/app/content/shared/time-content/time-content.component.html
@@ -2,5 +2,8 @@
 
 <!--TODO TIME CHART-->
 <div class="grid">
-    <app-time-chart [timeModel]="time"></app-time-chart>
+    <app-time-chart [color]="color"
+                    [timeModel]="time">
+
+    </app-time-chart>
 </div>
