--- a/public/src/app/content/content.component.html
+++ b/public/src/app/content/content.component.html
@@ -3,15 +3,15 @@
     <!--switch by current contentpage-->
     <div class="grid"
          *ngIf="contentService.currentContentpage"
-         [ngSwitch]="contentService.currentContentpage.type">
+         [ngSwitch]="contentService.currentContentpage.type.id">
 
         <!--YOUR RESULT CONTENT-->
-        <app-your-result-content *ngSwitchCase="CONTENTTYPE.YOUR_RESULT"
+        <app-your-result-content *ngSwitchCase="CONTENTTYPE.YOUR_RESULT.id"
                                  [yourResultContent]="data.yourResultContent">
         </app-your-result-content>
 
         <!--KEYWORD CONTENT-->
-        <app-keyword-content *ngSwitchCase="CONTENTTYPE.KEYWORD"
+        <app-keyword-content *ngSwitchCase="CONTENTTYPE.KEYWORD.id"
                              [keywordContent]="data.keywordContent[contentService.currentContentpage.id-1]">
         </app-keyword-content>
 
