--- a/public/src/app/content/your-result-content/your-result-content.component.html
+++ b/public/src/app/content/your-result-content/your-result-content.component.html
@@ -1,6 +1,8 @@
 <!--LEFT-->
 <div class="col-3">
-    <app-map-content></app-map-content>
+    <app-map-content  [map]="yourResultContent.map">
+
+    </app-map-content>
 </div>
 
 
