--- a/public/src/styles.less
+++ b/public/src/styles.less
@@ -1,10 +1,11 @@
 // IMPORT GLOBAL LESS FILES
 @import "./style/grid.less";
 @import "./style/colors.less";
+@import "style/colors_rendered.less";
 @import "./style/fonts.less";
 @import "./style/charts.less";
 
-// IMPORT COMPONENTS LESS FILES
+ //IMPORT COMPONENTS LESS FILES
 @import "./app/app.component.less";
 
 @import "./app/header/header.component.less";
