--- a/public/src/app/content/shared/map-content/map-content.component.css
+++ b/public/src/app/content/shared/map-content/map-content.component.css
@@ -10,8 +10,8 @@
 .square {
   float: left;
   box-sizing: border-box;
-  /*border: 1px solid rgba(0,0,0,0.2);*/
-  /*background-color: #88a;*/
+  border: 1px solid rgba(0,0,0,0.2);
+  background-color: #88a;
 }
 .square-fill {
   background-color: rgba(0, 0, 0, 0.2);
