--- a/public/src/app/content/shared/map-content/map-content.component.html
+++ b/public/src/app/content/shared/map-content/map-content.component.html
@@ -1,14 +1,20 @@
 <h2>Beliebtheit in Deutschland</h2>
 
 <!--TODO MAP-->
-<div class="grid bg-lightGrey">
-    <h3>TODO KARTE</h3>
-    <div *ngFor="let dummy of ' '.repeat(map.squaresY).split(''), let y = index">
-      <div *ngFor="let dummy of ' '.repeat(map.squaresX).split(''), let x = index">
-        <div id="{{y}}-{{x}}" class="square">o</div>
-      </div>
-    </div>
+<div class="grid">
+    <h3>{{selectedCity}}</h3>
+  <div id="map">
+    <div class="row" *ngFor="let dummy of ' '.repeat(map.squaresY).split(''), let y = index">
+        <div
+          *ngFor="let dummy of ' '.repeat(map.squaresX).split(''), let x = index"
+          ngClass="{{mapArr[y + '-' + x] ? 'square-fill' : ''}}"
+          id="{{y}}-{{x}}"
+          class="square"
+        >
 
+        </div>
+    </div>
+  </div>
   <!--<div *ngFor="let n of maxBarAmountArray; let i = index"-->
          <!--[ngClass]="[i <= valueRound ? 'bar bg-light-' + color : 'bar bg-lightGrey']">-->
 
