--- a/public/src/app/content/shared/map-content/map-content.component.less
+++ b/public/src/app/content/shared/map-content/map-content.component.less
@@ -1,7 +1,7 @@
 
 #map {
   position:relative;
-  background-color:#aaa;
+  //background-color:#aaa;
   //background-image:url("map.png");
   background-size: contain;
 }
@@ -14,8 +14,12 @@
 .square {
   float: left;
   box-sizing:border-box;
-  /*border: 1px solid rgba(0,0,0,0.2);*/
-  /*background-color: #88a;*/
+  width: 8px;
+  height: 8px;
+  margin-right: 4px;
+  margin-bottom: 4px;
+  //border: 1px solid rgba(0,0,0,0.2);
+  //background-color: #88a;
 }
 
 .square-fill {
