--- a/public/src/app/header/header.component.less
+++ b/public/src/app/header/header.component.less
@@ -29,10 +29,11 @@
 
 .jodelIcon {
   height: 100%;
-  background: url('assets/jodel_inv-free.png') no-repeat right center;
+  background: url('/public/src/assets/jodel_inv-free.png');
   background-size: contain;
 }
 
 .col-3 {
   height: 100%
 }
+
