--- a/public/src/app/header/header.component.less
+++ b/public/src/app/header/header.component.less
@@ -29,7 +29,7 @@
 
 .jodelIcon {
   height: 100%;
-  background: url('/public/src/assets/jodel_inv-free.png');
+  background: url('assets/jodel_inv-free.png') no-repeat right center;
   background-size: contain;
 }
 
