--- a/public/src/styles.css
+++ b/public/src/styles.css
@@ -298,7 +298,7 @@ button:hover {
 }
 .jodelIcon {
   height: 100%;
-  background: url('/public/src/assets/jodel_inv-free.png');
+  background: url('assets/jodel_inv-free.png') no-repeat right center;
   background-size: contain;
 }
 .col-3 {
