bar chart animation

--- a/public/src/app/content/shared/chart/bar-chart/bar-chart.component.html
+++ b/public/src/app/content/shared/chart/bar-chart/bar-chart.component.html
@@ -2,10 +2,19 @@
 
     <h3>{{title}}</h3>
 
-    <div *ngFor="let n of maxBarAmountArray; let i = index"
-         [ngClass]="[i <= valueRound ? 'bar bg-light-' + color : 'bar bg-lightGrey']">
+    <div [@barChartState]="{value: 'set', params: {'bar_color': colors[color]}}">
+        <div *ngFor="let n of valueRoundArray; let i = index"
+             [ngClass]="['bar bg-' + color]">
 
-        <div *ngIf="i == 1">{{value.toString()[0]}}</div>
-        <div *ngIf="i == 2">{{value.toString()[1]}}</div>
+            <div *ngIf="i == 1">{{value.toString()[0]}}</div>
+            <div *ngIf="i == 2">{{value.toString()[1]}}</div>
+        </div>
+    </div>
+
+    <div *ngFor="let n of maxBarAmountArray; let i = index"
+         class="bar bg-lightGrey">
+
+        <div *ngIf="i + valueRound == 1">{{value.toString()[0]}}</div>
+        <div *ngIf="i + valueRound == 2">{{value.toString()[1]}}</div>
     </div>
 </div>
