--- a/public/src/app/content/shared/chart/time-chart/time-chart.component.html
+++ b/public/src/app/content/shared/chart/time-chart/time-chart.component.html
@@ -3,7 +3,7 @@
 
     <div *ngFor="let n of maxValue; let j = index"
          [ngClass]="[j >= convertedValues[i] ? (j == convertedValues[i] ?
-                        'quad bg-light-' + color : 'long bg-light-' + color) :
+                        'quad bg-' + color : 'long bg-' + color) :
                         'quad bg-lightGrey']">
     </div>
 
