--- a/public/src/style/colors.less
+++ b/public/src/style/colors.less
@@ -4,12 +4,12 @@
  * @author  Maya
  * @since   22.03.2018
  */
-@orange: #FBB058;
-@green: #B5CF6C;
-@yellow: #FEC85C;
-@red: #E4867E;
-@blue: #68B5D5;
-@turquoise: #A7CAC1;
+@orange: lighten(#FBB058, 10%);
+@green: lighten(#B5CF6C, 10%);
+@yellow: lighten(#FEC85C, 10%);
+@red: lighten(#E4867E, 10%);
+@blue: lighten(#68B5D5, 10%);
+@turquoise: lighten(#A7CAC1, 10%);
 @darkGrey: #262323;
 @lightGrey: #F1F1F1;
 @grey: #6D6D6D;
