del config.ts and added class for infobox

--- a/public/src/app/content/shared/map-content/map-content.component.less
+++ b/public/src/app/content/shared/map-content/map-content.component.less
@@ -25,3 +25,11 @@
 .square-fill {
   background-color:rgba(0,0,0,0.2);
 }
+
+.info-box {
+  display: block;
+  position: absolute;
+  height: 83px;
+  width: 133px;
+  background-color: red;
+}
