--- a/public/src/styles.css
+++ b/public/src/styles.css
@@ -74,12 +74,36 @@ div {
  * @author  Maya
  * @since   22.03.2018
  */
-/**
- * Classes for Colors
- *
- * @author  Maya
- * @since   22.03.2018
- */
+.hm-orange-0 {
+  background-color: #fcc88a;
+}
+.hm-orange-1 {
+  background-color: #fcc380;
+}
+.hm-orange-2 {
+  background-color: #fcbe76;
+}
+.hm-orange-3 {
+  background-color: #fbb96c;
+}
+.hm-orange-4 {
+  background-color: #fbb562;
+}
+.hm-orange-5 {
+  background-color: #fbb058;
+}
+.hm-orange-6 {
+  background-color: #fbab4e;
+}
+.hm-orange-7 {
+  background-color: #fba744;
+}
+.hm-orange-8 {
+  background-color: #faa23a;
+}
+.hm-orange-9 {
+  background-color: #fa9d30;
+}
 .orange {
   color: #fcc88a;
 }
@@ -97,6 +121,36 @@ div {
 }
 .bg-dark-orange {
   background-color: #fcbc71;
+}
+.hm-green-0 {
+  background-color: #c8dc92;
+}
+.hm-green-1 {
+  background-color: #c4d98b;
+}
+.hm-green-2 {
+  background-color: #c1d783;
+}
+.hm-green-3 {
+  background-color: #bdd47b;
+}
+.hm-green-4 {
+  background-color: #b9d274;
+}
+.hm-green-5 {
+  background-color: #b5cf6c;
+}
+.hm-green-6 {
+  background-color: #b1cc64;
+}
+.hm-green-7 {
+  background-color: #adca5d;
+}
+.hm-green-8 {
+  background-color: #a9c755;
+}
+.hm-green-9 {
+  background-color: #a6c54d;
 }
 .green {
   color: #c8dc92;
@@ -116,6 +170,36 @@ div {
 .bg-dark-green {
   background-color: #bfd57f;
 }
+.hm-yellow-0 {
+  background-color: #fed98f;
+}
+.hm-yellow-1 {
+  background-color: #fed685;
+}
+.hm-yellow-2 {
+  background-color: #fed27a;
+}
+.hm-yellow-3 {
+  background-color: #fecf70;
+}
+.hm-yellow-4 {
+  background-color: #fecb66;
+}
+.hm-yellow-5 {
+  background-color: #fec85c;
+}
+.hm-yellow-6 {
+  background-color: #fec552;
+}
+.hm-yellow-7 {
+  background-color: #fec148;
+}
+.hm-yellow-8 {
+  background-color: #febe3e;
+}
+.hm-yellow-9 {
+  background-color: #feba33;
+}
 .yellow {
   color: #fed98f;
 }
@@ -133,6 +217,36 @@ div {
 }
 .bg-dark-yellow {
   background-color: #fed175;
+}
+.hm-red-0 {
+  background-color: #edaea8;
+}
+.hm-red-1 {
+  background-color: #eba6a0;
+}
+.hm-red-2 {
+  background-color: #e99e97;
+}
+.hm-red-3 {
+  background-color: #e8968f;
+}
+.hm-red-4 {
+  background-color: #e68e86;
+}
+.hm-red-5 {
+  background-color: #e4867e;
+}
+.hm-red-6 {
+  background-color: #e27e76;
+}
+.hm-red-7 {
+  background-color: #e0766d;
+}
+.hm-red-8 {
+  background-color: #df6e65;
+}
+.hm-red-9 {
+  background-color: #dd665c;
 }
 .red {
   color: #edaea8;
@@ -152,6 +266,36 @@ div {
 .bg-dark-red {
   background-color: #e89a93;
 }
+.hm-blue-0 {
+  background-color: #90c9e0;
+}
+.hm-blue-1 {
+  background-color: #88c5de;
+}
+.hm-blue-2 {
+  background-color: #80c1dc;
+}
+.hm-blue-3 {
+  background-color: #78bdd9;
+}
+.hm-blue-4 {
+  background-color: #70b9d7;
+}
+.hm-blue-5 {
+  background-color: #68b5d5;
+}
+.hm-blue-6 {
+  background-color: #60b1d3;
+}
+.hm-blue-7 {
+  background-color: #58add1;
+}
+.hm-blue-8 {
+  background-color: #50a9ce;
+}
+.hm-blue-9 {
+  background-color: #48a5cc;
+}
 .blue {
   color: #90c9e0;
 }
@@ -170,6 +314,36 @@ div {
 .bg-dark-blue {
   background-color: #7cbfdb;
 }
+.hm-turquoise-0 {
+  background-color: #c7ddd7;
+}
+.hm-turquoise-1 {
+  background-color: #c0d9d3;
+}
+.hm-turquoise-2 {
+  background-color: #bad6ce;
+}
+.hm-turquoise-3 {
+  background-color: #b4d2ca;
+}
+.hm-turquoise-4 {
+  background-color: #adcec5;
+}
+.hm-turquoise-5 {
+  background-color: #a7cac1;
+}
+.hm-turquoise-6 {
+  background-color: #a1c6bd;
+}
+.hm-turquoise-7 {
+  background-color: #9ac2b8;
+}
+.hm-turquoise-8 {
+  background-color: #94beb4;
+}
+.hm-turquoise-9 {
+  background-color: #8ebbaf;
+}
 .turquoise {
   color: #c7ddd7;
 }
@@ -187,6 +361,216 @@ div {
 }
 .bg-dark-turquoise {
   background-color: #b7d4cc;
+}
+.hm-grey-0 {
+  background-color: #6d6d6d;
+}
+.hm-grey-1 {
+  background-color: #686868;
+}
+.hm-grey-2 {
+  background-color: #636363;
+}
+.hm-grey-3 {
+  background-color: #5e5e5e;
+}
+.hm-grey-4 {
+  background-color: #595959;
+}
+.hm-grey-5 {
+  background-color: #535353;
+}
+.hm-grey-6 {
+  background-color: #4e4e4e;
+}
+.hm-grey-7 {
+  background-color: #494949;
+}
+.hm-grey-8 {
+  background-color: #444444;
+}
+.hm-grey-9 {
+  background-color: #3f3f3f;
+}
+.grey {
+  color: #6D6D6D;
+}
+.light-grey {
+  color: #878787;
+}
+.dark-grey {
+  color: #606060;
+}
+.bg-grey {
+  background-color: #6D6D6D;
+}
+.bg-light-grey {
+  background-color: #878787;
+}
+.bg-dark-grey {
+  background-color: #606060;
+}
+.hm-lightGrey-0 {
+  background-color: #f1f1f1;
+}
+.hm-lightGrey-1 {
+  background-color: #ececec;
+}
+.hm-lightGrey-2 {
+  background-color: #e7e7e7;
+}
+.hm-lightGrey-3 {
+  background-color: #e2e2e2;
+}
+.hm-lightGrey-4 {
+  background-color: #dddddd;
+}
+.hm-lightGrey-5 {
+  background-color: #d8d8d8;
+}
+.hm-lightGrey-6 {
+  background-color: #d2d2d2;
+}
+.hm-lightGrey-7 {
+  background-color: #cdcdcd;
+}
+.hm-lightGrey-8 {
+  background-color: #c8c8c8;
+}
+.hm-lightGrey-9 {
+  background-color: #c3c3c3;
+}
+.lightGrey {
+  color: #F1F1F1;
+}
+.light-lightGrey {
+  color: #ffffff;
+}
+.dark-lightGrey {
+  color: #e4e4e4;
+}
+.bg-lightGrey {
+  background-color: #F1F1F1;
+}
+.bg-light-lightGrey {
+  background-color: #ffffff;
+}
+.bg-dark-lightGrey {
+  background-color: #e4e4e4;
+}
+/**
+ * Classes for Colors
+ *
+ * @author  Maya
+ * @since   22.03.2018
+ */
+.orange {
+  color: #FBB058;
+}
+.light-orange {
+  color: #fcc88a;
+}
+.dark-orange {
+  color: #faa43f;
+}
+.bg-orange {
+  background-color: #FBB058;
+}
+.bg-light-orange {
+  background-color: #fcc88a;
+}
+.bg-dark-orange {
+  background-color: #faa43f;
+}
+.green {
+  color: #B5CF6C;
+}
+.light-green {
+  color: #c8dc92;
+}
+.dark-green {
+  color: #abc959;
+}
+.bg-green {
+  background-color: #B5CF6C;
+}
+.bg-light-green {
+  background-color: #c8dc92;
+}
+.bg-dark-green {
+  background-color: #abc959;
+}
+.yellow {
+  color: #FEC85C;
+}
+.light-yellow {
+  color: #fed98f;
+}
+.dark-yellow {
+  color: #febf43;
+}
+.bg-yellow {
+  background-color: #FEC85C;
+}
+.bg-light-yellow {
+  background-color: #fed98f;
+}
+.bg-dark-yellow {
+  background-color: #febf43;
+}
+.red {
+  color: #E4867E;
+}
+.light-red {
+  color: #edaea8;
+}
+.dark-red {
+  color: #e07269;
+}
+.bg-red {
+  background-color: #E4867E;
+}
+.bg-light-red {
+  background-color: #edaea8;
+}
+.bg-dark-red {
+  background-color: #e07269;
+}
+.blue {
+  color: #68B5D5;
+}
+.light-blue {
+  color: #90c9e0;
+}
+.dark-blue {
+  color: #54abcf;
+}
+.bg-blue {
+  background-color: #68B5D5;
+}
+.bg-light-blue {
+  background-color: #90c9e0;
+}
+.bg-dark-blue {
+  background-color: #54abcf;
+}
+.turquoise {
+  color: #A7CAC1;
+}
+.light-turquoise {
+  color: #c7ddd7;
+}
+.dark-turquoise {
+  color: #97c0b6;
+}
+.bg-turquoise {
+  background-color: #A7CAC1;
+}
+.bg-light-turquoise {
+  background-color: #c7ddd7;
+}
+.bg-dark-turquoise {
+  background-color: #97c0b6;
 }
 .grey {
   color: #6D6D6D;
@@ -356,4 +740,3 @@ select option {
 .square-fill {
   background-color: rgba(0, 0, 0, 0.2);
 }
-/*# sourceMappingURL=styles.css.map */
