--- a/public/src/app/content/shared/map-content/map-content.component.less
+++ b/public/src/app/content/shared/map-content/map-content.component.less
@@ -30,6 +30,18 @@
   display: block;
   position: absolute;
   height: 83px;
-  width: 133px;
-  background-color: red;
+  width: 333px;
+  //width: 133px;
+  //background-color: red;
+
+}
+
+.square-high {
+  background-color:red;
+}
+.square-mid {
+  background-color:orange;
+}
+.square-low {
+  background-color:yellow;
 }
